Finishing intern pages

--- a/Ecommerce/base.html
+++ b/Ecommerce/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nosotros</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,27 +31,6 @@
 
     <main class="contenido-principal contenedor-centrado">
       <h2 class="text-center">Sobre Nosotros</h2>
-
-      <div class="contenido-nosotros">
-        <div class="imagen">
-          <img src="img/nosotros.jpg" alt="Imagen Nosotros" />
-        </div>
-
-        <div class="informacion-nosotros">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
-            nemo numquam quaerat soluta, aspernatur, tenetur veniam dignissimos
-            corrupti iste est et ducimus suscipit iusto a harum aperiam
-            doloribus illo quisquam!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
-            nemo numquam quaerat soluta, aspernatur, tenetur veniam dignissimos
-            corrupti iste est et ducimus suscipit iusto a harum aperiam
-            doloribus illo quisquam!
-          </p>
-        </div>
-      </div>
     </main>
 
     <footer class="contenedor-centrado listado-footer">
