--- a/Ecommerce/entrada.html
+++ b/Ecommerce/entrada.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nosotros</title>
+    <title>Entrada Blog</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,28 +30,33 @@
     </div>
 
     <main class="contenido-principal contenedor-centrado">
-      <h2 class="text-center">Sobre Nosotros</h2>
+      <h2 class="text-center">Entrada Blog</h2>
 
-      <div class="contenido-nosotros">
+      <article class="entrada contenido-entrada-blog">
+        <h3>Guia de Colores</h3>
         <div class="imagen">
-          <img src="img/nosotros.jpg" alt="Imagen Nosotros" />
+          <img src="img/nosotros.jpg" alt="Imagen Blog" />
+        </div>
+        <div class="entrada-meta">
+          <p>Fecha: <span>29 de Octubre 2023</span></p>
+          <p>Escrito por: <span>Tienda de Muebles</span></p>
         </div>
 
-        <div class="informacion-nosotros">
+        <div class="entrada-blog">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
-            nemo numquam quaerat soluta, aspernatur, tenetur veniam dignissimos
-            corrupti iste est et ducimus suscipit iusto a harum aperiam
-            doloribus illo quisquam!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. In aliquam
+            doloribus delectus eum iusto, laudantium quae enim assumenda vel
+            vitae eius cupiditate pariatur dolorem, natus tempore saepe libero,
+            blanditiis quas.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
-            nemo numquam quaerat soluta, aspernatur, tenetur veniam dignissimos
-            corrupti iste est et ducimus suscipit iusto a harum aperiam
-            doloribus illo quisquam!
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta,
+            officiis. Ab ex, voluptatem vitae quod est soluta inventore
+            provident totam. Non ducimus saepe fugiat nisi sunt quasi natus
+            illum aut?
           </p>
         </div>
-      </div>
+      </article>
     </main>
 
     <footer class="contenedor-centrado listado-footer">
