--- a/Ecommerce/galeria.html
+++ b/Ecommerce/galeria.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nosotros</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,28 +30,55 @@
     </div>
 
     <main class="contenido-principal contenedor-centrado">
-      <h2 class="text-center">Sobre Nosotros</h2>
+      <h2 class="text-center">Galeria</h2>
 
-      <div class="contenido-nosotros">
-        <div class="imagen">
-          <img src="img/nosotros.jpg" alt="Imagen Nosotros" />
-        </div>
-
-        <div class="informacion-nosotros">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
-            nemo numquam quaerat soluta, aspernatur, tenetur veniam dignissimos
-            corrupti iste est et ducimus suscipit iusto a harum aperiam
-            doloribus illo quisquam!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
-            nemo numquam quaerat soluta, aspernatur, tenetur veniam dignissimos
-            corrupti iste est et ducimus suscipit iusto a harum aperiam
-            doloribus illo quisquam!
-          </p>
-        </div>
-      </div>
+      <ul class="galeria">
+        <li>
+          <a href="img/galeria_01.jpg">
+            <img src="img/galeria_01.jpg" alt="Imagen Galeria" />
+          </a>
+        </li>
+        <li>
+          <a href="img/galeria_02.jpg">
+            <img src="img/galeria_02.jpg" alt="Imagen Galeria" />
+          </a>
+        </li>
+        <li>
+          <a href="img/galeria_03.jpg">
+            <img src="img/galeria_03.jpg" alt="Imagen Galeria" />
+          </a>
+        </li>
+        <li>
+          <a href="img/galeria_04.jpg">
+            <img src="img/galeria_04.jpg" alt="Imagen Galeria" />
+          </a>
+        </li>
+        <li>
+          <a href="img/galeria_05.jpg">
+            <img src="img/galeria_05.jpg" alt="Imagen Galeria" />
+          </a>
+        </li>
+        <li>
+          <a href="img/galeria_06.jpg">
+            <img src="img/galeria_06.jpg" alt="Imagen Galeria" />
+          </a>
+        </li>
+        <li>
+          <a href="img/galeria_07.jpg">
+            <img src="img/galeria_07.jpg" alt="Imagen Galeria" />
+          </a>
+        </li>
+        <li>
+          <a href="img/galeria_08.jpg">
+            <img src="img/galeria_08.jpg" alt="Imagen Galeria" />
+          </a>
+        </li>
+        <li>
+          <a href="img/galeria_09.jpg">
+            <img src="img/galeria_09.jpg" alt="Imagen Galeria" />
+          </a>
+        </li>
+      </ul>
     </main>
 
     <footer class="contenedor-centrado listado-footer">
