--- a/Audifonos/index.html
+++ b/Audifonos/index.html
@@ -142,5 +142,23 @@
         </div>
       </div>
     </main>
+
+    <section>
+      <div class="seccion-suscribirse">
+        <div class="seccion-suscribirse-contenido">
+          <h3>Recibe Actualizaciones</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem,
+            iure aliquid nulla, minus possimus consequatur officiis quo nisi
+            natus facere harum magnam nemo eos error in quia, tenetur molestias
+            eaque.
+          </p>
+          <form>
+            <input type="email" name="email" id="email" />
+            <input type="submit" value="Inscribirme" />
+          </form>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
