--- a/Nucleus/index.html
+++ b/Nucleus/index.html
@@ -112,5 +112,139 @@
         </div>
       </div>
     </section>
+
+    <section class="comisiones">
+      <div class="comisiones__contenedor contenedor">
+        <h2 class="comisiones__heading">Comisiones</h2>
+
+        <div class="comisiones__grid">
+          <div class="comisiones__informacion">
+            <p class="comisiones__informacion-negrita">
+              Mientras mas veces utilices nucleus, menos pagas
+            </p>
+            <div class="comisiones__elemento sombra">
+              <h3 class="comisiones__porcentaje">3%</h3>
+              <p class="comisiones__texto">
+                De todas tus transacciones si tus movimientos son menores a $999
+                USD
+              </p>
+            </div>
+            <div class="comisiones__elemento sombra">
+              <h3 class="comisiones__porcentaje">2.5%</h3>
+              <p class="comisiones__texto">
+                De todas tus transacciones si tus movimientos son mayores a $999
+                USD
+              </p>
+            </div>
+          </div>
+
+          <div class="comisiones__imagen">
+            <img src="img/app_3.svg" alt="Imagen Comisiones" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="testimoniales">
+      <div class="testimoniales__contenedor contenedor">
+        <h2 class="testimoniales__heading">Testimoniales</h2>
+
+        <div class="testimoniales__grid">
+          <div class="testimoniales__elemento">
+            <div class="testimoniales__quote">
+              <img
+                class="testimoniales__comilla"
+                src="img/comilla.png"
+                alt="Imagen Testimoniales"
+              />
+              <p class="testimoniales__texto">
+                Excelente app, muy sencilla de manejar y enviar dinero
+              </p>
+            </div>
+            <p class="testimoniales__autor">- Andres Felipe Velez</p>
+          </div>
+          <div class="testimoniales__elemento">
+            <div class="testimoniales__quote">
+              <img
+                class="testimoniales__comilla"
+                src="img/comilla.png"
+                alt="Imagen Testimoniales"
+              />
+              <p class="testimoniales__texto">
+                Excelente app, muy sencilla de manejar y enviar dinero
+              </p>
+            </div>
+            <p class="testimoniales__autor">- Andres Felipe Velez</p>
+          </div>
+          <div class="testimoniales__elemento">
+            <div class="testimoniales__quote">
+              <img
+                class="testimoniales__comilla"
+                src="img/comilla.png"
+                alt="Imagen Testimoniales"
+              />
+              <p class="testimoniales__texto">
+                Excelente app, muy sencilla de manejar y enviar dinero
+              </p>
+            </div>
+            <p class="testimoniales__autor">- Andres Felipe Velez</p>
+          </div>
+          <div class="testimoniales__elemento">
+            <div class="testimoniales__quote">
+              <img
+                class="testimoniales__comilla"
+                src="img/comilla.png"
+                alt="Imagen Testimoniales"
+              />
+              <p class="testimoniales__texto">
+                Excelente app, muy sencilla de manejar y enviar dinero
+              </p>
+            </div>
+            <p class="testimoniales__autor">- Andres Felipe Velez</p>
+          </div>
+          <div class="testimoniales__elemento">
+            <div class="testimoniales__quote">
+              <img
+                class="testimoniales__comilla"
+                src="img/comilla.png"
+                alt="Imagen Testimoniales"
+              />
+              <p class="testimoniales__texto">
+                Excelente app, muy sencilla de manejar y enviar dinero
+              </p>
+            </div>
+            <p class="testimoniales__autor">- Andres Felipe Velez</p>
+          </div>
+          <div class="testimoniales__elemento">
+            <div class="testimoniales__quote">
+              <img
+                class="testimoniales__comilla"
+                src="img/comilla.png"
+                alt="Imagen Testimoniales"
+              />
+              <p class="testimoniales__texto">
+                Excelente app, muy sencilla de manejar y enviar dinero
+              </p>
+            </div>
+            <p class="testimoniales__autor">- Andres Felipe Velez</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer__contenedor contenedor">
+        <div class="footer__logo">
+          <img src="img/logo-blanco.svg" alt="Logo footer" />
+        </div>
+
+        <nav class="footer__navegacion">
+          <a href="#" class="footer__navegacion-enlace">¿Que es?</a>
+          <a href="#" class="footer__navegacion-enlace">¿Como funciona?</a>
+          <a href="#" class="footer__navegacion-enlace">Precios</a>
+          <a href="#" class="footer__navegacion-enlace">Contratar</a>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
