Finishin Main Page Cafeteria

--- a/Cafeteria/index.html
+++ b/Cafeteria/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bona+Nova&family=Raleway:wght@700;900&family=Roboto:wght@700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="build/css/app.css" />
@@ -21,7 +21,7 @@
           </div>
 
           <nav class="header__navegacion">
-            <a href="index.html" class="header__link">Inicio</a>
+            <a class="activo" href="index.html" class="header__link">Inicio</a>
             <a href="nosotros.html" class="header__link">Nosotros</a>
             <a href="proceso.html" class="header__link">Proceso</a>
             <a href="menu.html" class="header__link">Menu</a>
@@ -31,9 +31,91 @@
         </div>
 
         <div class="header__texto">
-          <h1 class="header__heading">Disfruta una deliciosa tasa de cafe</h1>
+          <h1 class="header__heading">Disfruta una deliciosa taza de cafe</h1>
         </div>
       </div>
     </header>
+
+    <main class="contenedor">
+      <section class="contenido__principal">
+        <h2 class="contenido__principal__heading">
+          <span>Conoce mas</span> Sobre nosotros
+        </h2>
+
+        <p class="contenido__principal__texto">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+          sapiente aperiam, quibusdam saepe, quasi quaerat, alias odit fugit
+          voluptatem rem nostrum ipsa beatae qui minima totam? Sit fuga atque
+          doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Recusandae illo voluptatum mollitia sed repellat magni, perferendis,
+          eveniet nobis pariatur eum eaque aliquid voluptatibus architecto
+          laborum aperiam excepturi. Facilis, eius ab!
+        </p>
+
+        <div class="contenido__principal__iconos">
+          <div class="contenido__principal__icono">
+            <img
+              class="icono"
+              src="build/img/icono_cafe.svg"
+              alt="Icono Cafe"
+            />
+            <h2 class="heading__icono">Cafe</h2>
+          </div>
+          <div class="contenido__principal__icono">
+            <img
+              class="icono"
+              src="build/img/icono_postre.svg"
+              alt="Icono Postre"
+            />
+            <h2 class="heading__icono">Postre</h2>
+          </div>
+          <div class="contenido__principal__icono">
+            <img class="icono" src="build/img/icono_te.svg" alt="Icono Te" />
+            <h2 class="heading__icono">Te</h2>
+          </div>
+        </div>
+
+        <section class="galeria__seccion contenedor">
+          <div class="galeria__contenido">
+            <h2 class="contenido__principal__heading">
+              <span>Vive la</span> Experencia
+            </h2>
+
+            <div class="galeria">
+              <div class="galeria__imagen">
+                <img src="build/img/galeria/galeria_01.jpg" alt="Galeria" />
+              </div>
+              <div class="galeria__imagen">
+                <img src="build/img/galeria/galeria_02.jpg" alt="Galeria" />
+              </div>
+              <div class="galeria__imagen">
+                <img src="build/img/galeria/galeria_03.jpg" alt="Galeria" />
+              </div>
+              <div class="galeria__imagen">
+                <img src="build/img/galeria/galeria_04.jpg" alt="Galeria" />
+              </div>
+              <div class="galeria__imagen">
+                <img src="build/img/galeria/galeria_05.jpg" alt="Galeria" />
+              </div>
+              <div class="galeria__imagen">
+                <img src="build/img/galeria/galeria_06.jpg" alt="Galeria" />
+              </div>
+              <div class="galeria__imagen">
+                <img src="build/img/galeria/galeria_07.jpg" alt="Galeria" />
+              </div>
+              <div class="galeria__imagen">
+                <img src="build/img/galeria/galeria_08.jpg" alt="Galeria" />
+              </div>
+              <div class="galeria__imagen">
+                <img src="build/img/galeria/galeria_09.jpg" alt="Galeria" />
+              </div>
+              <div class="galeria__imagen">
+                <img src="build/img/galeria/galeria_10.jpg" alt="Galeria" />
+              </div>
+            </div>
+          </div>
+        </section>
+      </section>
+    </main>
   </body>
 </html>
