--- a/Cafeteria/index.html
+++ b/Cafeteria/index.html
@@ -117,5 +117,167 @@
         </section>
       </section>
     </main>
+
+    <section class="menu__seccion">
+      <div class="contenedor">
+        <div class="menu__heading__contenido">
+          <h2 class="menu__heading"><span>Nuestro Delicioso</span>MENU</h2>
+        </div>
+
+        <div class="menu__list">
+          <section class="menu">
+            <h3 class="menu__list-item">cafe</h3>
+            <div class="menu__flex">
+              <ul>
+                <li>
+                  <p>
+                    Café Latte
+                    <span>Café Espresso con leche caliente evaporada</span>
+                  </p>
+                  <p class="precio">$25</p>
+                </li>
+                <li>
+                  <p>Café Mocha <span>Espresso con crema batida</span></p>
+                  <p class="precio">$30</p>
+                </li>
+                <li>
+                  <p>Café Americano <span>Café Negro</span></p>
+                  <p class="precio">$30</p>
+                </li>
+                <li>
+                  <p>
+                    Capuccino<span>Espresso con una capa suave de espuma</span>
+                  </p>
+                  <p class="precio">$25</p>
+                </li>
+                <li>
+                  <p>
+                    Café Mocha Frio<span
+                      >Espresso, dulce con mocha y leche.</span
+                    >
+                  </p>
+                  <p class="precio">$29</p>
+                </li>
+                <li>
+                  <p>
+                    Mocha Frio Quemado<span
+                      >Espresso, hielo, con azucar quemada y mantequilla.</span
+                    >
+                  </p>
+                  <p class="precio">$35</p>
+                </li>
+                <li>
+                  <p>
+                    Latte con Caramelo<span>Espresso, leche y caramelo.</span>
+                  </p>
+                  <p class="precio">$39</p>
+                </li>
+              </ul>
+            </div>
+          </section>
+
+          <section class="menu">
+            <h3 class="menu__list-item">comida</h3>
+            <div class="menu__flex">
+              <ul>
+                <li>
+                  <p>
+                    Baguette de Pollo
+                    <span>Delicioso Baguette con pollo a la plancha</span>
+                  </p>
+                  <p class="precio">$45</p>
+                </li>
+                <li>
+                  <p>
+                    Baguette Pollo y Queso
+                    <span>Baguette combinado con Pollo y Queso Manchego</span>
+                  </p>
+                  <p class="precio">$50</p>
+                </li>
+                <li>
+                  <p>
+                    Baguette con Tocino<span
+                      >Baguette con especias y verduras, además de tocino</span
+                    >
+                  </p>
+                  <p class="precio">$50</p>
+                </li>
+                <li>
+                  <p>
+                    Baguette de Jamón<span
+                      >Delicioso Baguette con Jamón y Especias</span
+                    >
+                  </p>
+                  <p class="precio">$65</p>
+                </li>
+                <li>
+                  <p>
+                    Baguette con Jamón, Queso y Tocino<span
+                      >El especial de la casa</span
+                    >
+                  </p>
+                  <p class="precio">$69</p>
+                </li>
+                <li>
+                  <p>
+                    Sandwich de Pollo<span
+                      >Delicioso sandwich con Pollo y especies</span
+                    >
+                  </p>
+                  <p class="precio">$65</p>
+                </li>
+                <li>
+                  <p>
+                    Sandwich de Jamón y queso<span
+                      >Queso Amarillo con Jamón y Queso</span
+                    >
+                  </p>
+                  <p class="precio">$59</p>
+                </li>
+              </ul>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
+
+    <section class="testimonios contenedor">
+      <h2 class="contenido__principal__heading">
+        <span>Lo que dicen Nuestros</span> Clientes
+      </h2>
+
+      <div class="testimonio">
+        <p class="testimonio__texto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ea in
+          voluptates, molestiae repellat hic unde, nostrum cupiditate sapiente
+          beatae magni quam! Nisi, provident quisquam esse repellat eligendi
+          sunt dolorum!
+        </p>
+        <span class="testimonio__autor">- Andres Felipe Velez</span>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="testimonio__informacion contenedor">
+        <div class="testimonio__informacion-texto">
+          <h3 class="testimonio__heading">ubicacion</h3>
+          <p>Nicolas Copernico</p>
+          <p>Colombia, Bogota</p>
+        </div>
+        <div class="testimonio__informacion-texto">
+          <h3 class="testimonio__heading">reservacion</h3>
+          <p>Tel 3859-9120</p>
+          <p>Llamar</p>
+        </div>
+        <div class="testimonio__informacion-texto">
+          <h3 class="testimonio__heading">horario</h3>
+          <p>Lun-Jue: 11:00 - 22:00</p>
+          <p>Vie-Sab 9:00 - 24:00</p>
+          <p>Domingo: Cerrado</p>
+        </div>
+      </div>
+
+      <p class="footer__derechos">Todos los derechos reservados La Cafeteria</p>
+    </footer>
   </body>
 </html>
