Finishing SAAS to AirBnB Clone

--- a/AirBnB/index.html
+++ b/AirBnB/index.html
@@ -149,5 +149,94 @@
         </div>
       </div>
     </section>
+
+    <section class="anfitrion contenedor">
+      <div class="anfitrion__contenido">
+        <h2 class="anfitrion__heading">Animate a ser anfitrion</h2>
+        <p class="anfitrion__texto">
+          Comparte tu espacio para ganar dinero extra y aprovechar nuevas
+          oportunidades
+        </p>
+        <a class="anfitrion__boton" href="#">Mas informacion</a>
+      </div>
+    </section>
+
+    <section class="experiencias contenedor">
+      <h2 class="experiencias__heading">Descubre Experiencias</h2>
+      <p class="experiencias__texto">
+        Actividades unicas con expertos locales, en persona o en linea.
+      </p>
+
+      <div class="experiencias__grid">
+        <div class="experiencias__experiencia">
+          <img src="build/img/experiencia_1.jpg" alt="Imagen Exp" />
+          <p class="experiencias__label">Experiencias</p>
+          <p class="experiencias__normal">
+            Actividades Locales estes donde estes
+          </p>
+        </div>
+        <div class="experiencias__experiencia">
+          <img src="build/img/experiencia_2.jpg" alt="Imagen Exp" />
+          <p class="experiencias__label">Experiencias</p>
+          <p class="experiencias__normal">Visita una ciudad y vive en ella.</p>
+        </div>
+        <div class="experiencias__experiencia">
+          <img src="build/img/experiencia_3.jpg" alt="Imagen Exp" />
+          <p class="experiencias__label">Experiencias en linea</p>
+          <p class="experiencias__normal">Actividades interactivas en vivo</p>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer__contenido contenedor">
+        <div class="footer__grid">
+          <div class="footer__elemento">
+            <p class="footer__heading">Acerca de</p>
+
+            <div class="footer__enlaces">
+              <a class="footer__enlace" href="#">Enlace 1</a>
+              <a class="footer__enlace" href="#">Enlace 2</a>
+              <a class="footer__enlace" href="#">Enlace 3</a>
+              <a class="footer__enlace" href="#">Enlace 4</a>
+            </div>
+          </div>
+          <div class="footer__elemento">
+            <p class="footer__heading">Comunidad</p>
+            <div class="footer__enlaces">
+              <a class="footer__enlace" href="#">Enlace 1</a>
+              <a class="footer__enlace" href="#">Enlace 2</a>
+              <a class="footer__enlace" href="#">Enlace 3</a>
+              <a class="footer__enlace" href="#">Enlace 4</a>
+            </div>
+          </div>
+          <div class="footer__elemento">
+            <p class="footer__heading">Anfitrion</p>
+            <div class="footer__enlaces">
+              <a class="footer__enlace" href="#">Enlace 1</a>
+              <a class="footer__enlace" href="#">Enlace 2</a>
+              <a class="footer__enlace" href="#">Enlace 3</a>
+              <a class="footer__enlace" href="#">Enlace 4</a>
+            </div>
+          </div>
+          <div class="footer__elemento">
+            <p class="footer__heading">Asistencia</p>
+            <div class="footer__enlaces">
+              <a class="footer__enlace" href="#">Enlace 1</a>
+              <a class="footer__enlace" href="#">Enlace 2</a>
+              <a class="footer__enlace" href="#">Enlace 3</a>
+              <a class="footer__enlace" href="#">Enlace 4</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__barra">
+          <a class="footer__enlace" href="#">Enlace Nuevo</a>
+          <a class="footer__enlace" href="#">Enlace Nuevo</a>
+          <a class="footer__enlace" href="#">Enlace Nuevo</a>
+          <a class="footer__enlace" href="#">Enlace Nuevo</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
